Move library loading interop to a java class